[gd_scene load_steps=3 format=3 uid="uid://dd3ao6a116j77"]

[ext_resource type="Script" uid="uid://bm2wwp3fs8gk4" path="res://net/scripts/multiplayer.gd" id="1_b0l6s"]

[sub_resource type="LabelSettings" id="LabelSettings_o4y1c"]
font_size = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0l6s")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 343.0
offset_right = 369.0
offset_bottom = 415.0
text = "Host"

[node name="Connect" type="Button" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 344.0
offset_right = 678.0
offset_bottom = 416.0
text = "Connect"

[node name="name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 193.0
offset_right = 669.0
offset_bottom = 245.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 191.0
offset_right = 227.0
offset_bottom = 243.0
text = "name:"
label_settings = SubResource("LabelSettings_o4y1c")

[node name="hostname" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 264.0
offset_right = 666.0
offset_bottom = 316.0
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 262.0
offset_right = 224.0
offset_bottom = 314.0
text = "host ip:"
label_settings = SubResource("LabelSettings_o4y1c")

[node name="Escape" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 23.0
offset_right = 290.0
offset_bottom = 95.0
text = "Back to the Title"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Connect" to="." method="_on_connect_button_down"]
[connection signal="button_down" from="Escape" to="." method="_on_escape_button_down"]
